--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "lucide-react": "^0.414.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
