--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
     "emoji-picker-react": "^4.11.1",
     "flowbite": "^2.4.1",
     "flowbite-react": "^0.10.1",
