--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "author": "Rahul Dohare",
   "license": "MIT",
   "dependencies": {
+    "@vercel/node": "^3.2.8",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
