--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,21 +2,14 @@
     "version": 2,
     "builds": [
       {
-        "src": "index.js",
+        "src": "server.js",
         "use": "@vercel/node"
-      },
-      {
-        "src": "package.json",
-        "use": "@vercel/static-build",
-        "config": {
-          "distDir": "dist"
-        }
       }
     ],
     "routes": [
       {
-        "src": "/api/(.*)",
-        "dest": "/index.js"
+        "src": "/(.*)",
+        "dest": "server.js"
       }
     ]
   }
